# pytest-layer-decorators

./: .gitignore  README.md  pyproject.toml
examples/simple_app/: pyproject.toml
examples/simple_app/src/simple_app/application/: services.py
examples/simple_app/src/simple_app/domain/: models.py
examples/simple_app/src/simple_app/infrastructure/: repository.py
examples/simple_app/src/simple_app/presentation/: cli.py
examples/simple_app/tests/application/: test_services.py
examples/simple_app/tests/domain/: test_models.py
examples/simple_app/tests/infrastructure/: test_repository.py
examples/simple_app/tests/presentation/: test_cli.py
src/pytest_layer_decorators/: __init__.py  _config.py  _decorators.py  _exempt.py  _mock_check.py  _plugin.py  _rules.py
tests/test_config/: test_allowed_layers.py  test_is_configured.py  test_layer_names.py  test_load_config.py
tests/test_decorators/: test_apply_markers.py  test_layer_metadata.py
tests/test_mock_check/: helpers.py  test_detect_mocks.py  test_load_policy.py
tests/test_plugin/: helpers.py  test_mock_policy.py  test_no_config.py  test_valid_usage.py  test_violations.py
tests/test_rules/: helpers.py  test_application_rules.py  test_domain_rules.py  test_empty_config.py  test_exempt.py  test_infrastructure_rules.py  test_presentation_rules.py  test_transitive.py
