[project]
name = "pytest-layer-decorators"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Glauber Brennon", email = "glauberbrennon@gmail.com" }
]
requires-python = ">=3.12"
dependencies = []

[project.scripts]
pytest-layer-decorators = "pytest_layer_decorators:main"

[build-system]
requires = ["uv_build>=0.9.18,<0.10.0"]
build-backend = "uv_build"
