[project]
name = "simple-app"
version = "0.1.0"
description = "Example app demonstrating pytest-layer-decorators"
requires-python = ">=3.14"
dependencies = [
    "pytest>=9.0.3",
    "pytest-layer-decorators",
]

[tool.pytest_layer_decorators]
domain_modules        = ["simple_app.domain.*"]
application_modules   = ["simple_app.application.*"]
infrastructure_modules = ["simple_app.infrastructure.*"]
presentation_modules  = ["simple_app.presentation.*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.uv.sources]
pytest-layer-decorators = { path = "../..", editable = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest_layer_decorators.allow_mocks]
domain = false
